# quasar

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.claude/: settings.local.json
.claude/agents/: code-reviewer-backend.md  code-reviewer-db.md  code-reviewer-frontend.md  code-reviewer-integration.md  code-reviewer-tests.md  playwright-tester.md
.claude/commands/: review-pr.md
.claude/docs/: architectural_patterns.md
.github/workflows/: docs-deploy.yml  docs.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
config-feature/: api-credentials.md  configurable-providers-overview.md  lookback-period.md  scheduling-configuration.md
db/migrations/: 001_add_identity_indexes.sql  001_optimize_suggestions.sql  002_add_provider_preferences.sql  002_optimize_provider_subscription_fk.sql  003_add_data_asset_fk_indexes.sql  004_remove_hypertable_asset_fk.sql  005_add_identity_matching_indexes.sql  006_add_isin_source.sql
db/schema/: 01_base.sql  01_enums_generated.sql  02_provider_subscription.sql  02_registry.sql  03_assets.sql  03_historical_data.sql  04_asset_mapping.sql  04_live_data.sql  05_provider_subscription.sql  06_historical_data.sql  07_live_data.sql  08_mapping_suggestions_support.sql  09_identity_manifest.sql  10_index.sql
db/test_sql/: init_subscriptions.sql
docs/: architecture.md  git-workflow.md  index.md  mkdocs.yml  requirements.txt  strategy_engine_concepts.md  useful-commands.md
docs/contributing/: docs-style.md  docstrings.md  publishing.md
docs/howto/: providers.md
docs/reference/: datahub.md  index.md  lib-common.md  providers.md  registry.md
docs/services/: datahub.md  registry.md  web.md
enums/: README.md  asset-classes.yml  intervals.yml
memory-bank/: activeContext.md  progress.md  projectbrief.md  symbols.md  systemPatterns.md  techContext.md
nginx/: nginx.conf
quasar/: __init__.py  datahub_app.py  datahub_core.py  provider_base.py  secret_store.py
quasar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quasar/common/: __init__.py  api_handler.py  context.py  offset_cron.py  secret_store.py
quasar/datahub/: Dockerfile  __init__.py  app.py  core.py  schemas.py
quasar/lib/: __init__.py  enums.py
quasar/lib/common/: api_handler.py  calendar.py  context.py  database_handler.py  enum_guard.py  offset_cron.py  schemas.py  secret_store.py
quasar/lib/providers/: __init__.py  core.py  eodhd.py  kraken.py
quasar/lib/strategies/: __init__.py  base.py  templates.py
quasar/providers/: __init__.py  core.py  eodhd.py  kraken.py
quasar/registry/: Dockerfile  __init__.py  app.py  core.py
quasar/services/: __init__.py
quasar/services/datahub/: Dockerfile  app.py  core.py  schemas.py
quasar/services/registry/: Dockerfile  app.py  core.py  mapper.py  matcher.py  schemas.py
quasar/services/strategy_engine/: Dockerfile  __init__.py  app.py  core.py  schemas.py
quasar/tests/: conftest.py
quasar/tests/common/: test_api_handler.py  test_context.py  test_offset_cron.py  (+2 more)
quasar/web/: package.json  vite.config.mjs
scripts/: gen_enums.py  validate_quickstart.py
specs/001-configurable-providers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py  test_config_integration.py  test_configurable_providers.py
tests/lib/: test_enums.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.mjs
web/src/: App.js  _nav.js  enums.ts  routes.js
(+119 files in other folders)
