[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include =["quasar*"]
exclude =["test_code*"]

[project]
name = "quasar"
version = "0.0.1"
description = "Quasar trading‑platform core"
authors = [{name = "Brandon L. Johnson"}]
requires-python = ">=3.12"

# Runtime deps used in your code
dependencies = [
    "aiohttp==3.11.18",
    "aiohttp_cors==0.8.1",
    "aiolimiter==1.2.1",
    "APScheduler==3.11.0",
    "asyncpg==0.30.0",
    "boto3==1.38.8",
    "Requests==2.32.3",
    "cryptography==44.0.3",
    "websockets==15.0.1"
]

# Optional extras for local dev / tests
# [project.optional-dependencies]
# dev = ["pytest", "black", "mypy"]
