[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include =["quasar*"]
exclude =["scripts*", "tests*"]

[project]
name = "quasar"
version = "0.0.1"
description = "Quasar trading‑platform core"
authors = [{name = "Brandon L. Johnson"}]
requires-python = ">=3.12"

# Runtime deps used in your code
dependencies = [
    "aiohttp==3.11.18",
    "aiohttp_cors==0.8.1",
    "aiolimiter==1.2.1",
    "APScheduler==3.11.0",
    "asyncpg==0.30.0",
    "boto3==1.38.8",
    "cryptography==45.0.2",
    "fastapi>=0.115.0",
    "lxml>=5.0.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "Requests==2.32.3",
    "uvicorn[standard]>=0.30.0",
    "websockets==15.0.1",
    "exchange_calendars==4.5.6"
]

# Optional extras for local dev / tests
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=quasar --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["quasar"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Template providers - examples uploaded at runtime, not tested directly
    "quasar/lib/providers/examples/eodhd.py",
    "quasar/lib/providers/examples/kraken.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]
